--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.DS_Store
+
+.idea/
+statistics.iml
+target/classes/application.properties
+target/generated-sources/
+target/generated-test-sources/
+target/maven-archiver/
+target/maven-status/
+target/statistics-1.0.jar.original
+target/surefire-reports/
+target/test-classes/application.properties
